/*
 * $Id: ChangeLog,v 1.356 2007-05-27 22:43:39 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-27 17:28 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_pdf.prg
    * Fixed PDF creation when trying to draw an inexistent image file.

2007-05-22 23:13 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
    ! Removed warnings.

2007-05-22 11:35 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/miniprint.prg
     ! fixed to avoid Dup fuction getdefaultprinter in xharbour mingw.

2007-05-14 21:30 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    ! Fixed (wrong) ::NotifyMenuHandle usage.
  * source/h_controlmisc.prg
    ! Removed unused code for "control inside TAB page" semi-OOP
      notation in GetProperty/SetProperty/DoMethod.

2007-05-13 23:24 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_combo.prg
    * Fixed ::Value assignment when ::ValueSource is defined.
      Reported/fixed by jose. Thanks!

2007-05-13 21:22 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/common_make.bat
  - source/c_toolbar.c
  * source/h_toolbar.prg
  * source/makelib_bcc.bat
  * source/makelib_minwg.bat
    * Moved C code to h_toolbar.prg file.
    - c_toolbar.c file removed.
    * Codification style fixes.
  * include/i_window.ch
    * Fixed for allow "control inside TAB page" semi-OOP notation
      (TAB control name ignored).
  * source/h_pdf.prg
    * ::AFO array splitted to 3 arrays.

2007-05-10 23:40 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_this.ch
  * include/i_var.ch
  * source/h_controlmisc.prg
  * source/h_init.prg
  * source/h_windows.prg
    + This:* and ThisWindow:* "virtual" objects included.

2007-05-09 22:21 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>