@@ -1,11 +1,16 @@
 /*
- * $Id: ChangeLog,v 1.356 2007-05-27 22:43:39 guerra000 Exp $
+ * $Id: ChangeLog,v 1.357 2007-05-29 19:45:06 declan2005 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-05-29 14:43 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
+  * source/c_winapimisc.c
+  * source/miniprint.prg
+    ! fixed dup functions with xharbour and Mingw
 
 2007-05-27 17:28 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_pdf.prg
